<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginTop="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/country_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:maxLines="3"
            android:text="@string/item_default_country_name"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/country_alpha2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/item_alpha2"
            android:textColor="@android:color/darker_gray"
            android:textSize="14sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/country_alpha3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/item_alpha3"
            android:textColor="@android:color/darker_gray"
            android:textSize="14sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/country_region"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/item_region"
            android:textColor="@android:color/darker_gray"
            android:textSize="14sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/country_subregion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/item_sub_region"
            android:textColor="@android:color/darker_gray"
            android:textSize="14sp"
            android:textStyle="italic" />
    </LinearLayout>
</android.support.v7.widget.CardView>
